--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,15 +1,11 @@
 .container {
   box-shadow: 0px 4px 40px 0px #0000000f;
   width: 288px;
-  height: 268px;
-  /* top: 190px;
-  left: 120px; */
   border-radius: 20px;
-  /* padding: 15px; */
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
+  padding-bottom: 15px;
 }
 
 .small_card {
@@ -49,4 +45,22 @@
   display: flex;
   align-items: center;
   /* text-align: center; */
+}
+
+.view {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  width: 228px;
+  height: 46px;
+  border-radius: 14px;
+  background: #e85382;
+  margin-top: 20px;
+}
+
+.view_name {
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
 }
