--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -42,6 +42,7 @@
 .row {
   display: flex;
   align-items: center;
+  cursor: pointer;
   /* margin-inline: 40px; */
 }
 
@@ -57,6 +58,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .theme {
