--- a/src/components/stats/Stats.module.css
+++ b/src/components/stats/Stats.module.css
@@ -1,4 +1,133 @@
 .container {
-  background-color: red;
+  background-color: var(--white);
   height: 100vh;
+  width: 500px;
+}
+
+.card {
+  width: 90%;
+  margin: 0 auto;
+  height: 250px;
+  border-radius: 15px;
+  background: linear-gradient(180deg, #7fcad1 0%, #3da0a9 100%);
+  box-shadow: 0px 4px 4px 0px #0000001a inset;
+  /* position: relative; */
+
+  /* margin-inline: 20px; */
+}
+
+.back {
+  height: 50px;
+  width: 50px;
+  background-color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  margin: 30px 40px;
+  box-shadow: 0px 4px 4px 0px #0000001a;
+  border-radius: 9px;
+}
+
+.image {
+  display: flex;
+  justify-content: center;
+  margin-top: -200px;
+}
+
+.name {
+  text-align: center;
+  font-size: 48px;
+  font-weight: 600;
+}
+
+.abilities {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.ability {
+  background-color: var(--light-silver);
+  border-radius: 14px;
+  padding: 5px 10px;
+}
+
+.info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 150px; */
+  gap: 15px;
+  border-bottom: 1px solid var(--light-silver);
+  padding: 10px 0;
+  margin: 0 auto;
+}
+
+.label {
+  flex: 0.5;
+  text-align: right;
+  /* width: 150px; */
+}
+
+.value {
+  flex: 0.5;
+  font-weight: 600;
+}
+.about {
+  background: linear-gradient(
+    270deg,
+    #ffffff 0%,
+    rgba(217, 217, 217, 0.06) 51.04%,
+    #ffffff 100%
+  );
+  width: 510px;
+  height: 172px;
+}
+
+.title {
+  text-align: center;
+  margin: 30px 0;
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.nav {
+  background: #e9e9e9;
+  height: 64px;
+  width: 300px;
+  margin: 20px auto;
+  border-radius: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  box-shadow: 0px 3px 2px 0px #0000000f inset;
+  padding-inline: 10px;
+  gap: 50px;
+}
+
+.navItem {
+  cursor: pointer;
+}
+
+#navItem_active {
+  box-shadow: 0px 4px 4px 0px #0000000d;
+  background: #ffffff;
+  padding: 10px 20px;
+  border-radius: 60px;
+}
+
+.stats {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.stats_container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
