--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -67,3 +67,39 @@
   border-radius: 50px;
   background: #e85382;
 }
+
+@media only screen and (max-width: 430px) {
+  .container {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+
+  .row {
+    flex: 0.2;
+  }
+  .image {
+    height: 40px;
+    margin-top: -10px;
+    /* display: none; */
+  }
+
+  .name {
+    /* display: none; */
+    /* font-size: 20px; */
+  }
+
+  .search_container {
+    /* flex: 0.6;
+    width: 100%; */
+    display: none;
+  }
+
+  .theme_wrapper {
+    /* flex: 0.2; */
+    margin-right: 20px;
+    zoom: 0.7;
+  }
+}
