--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -78,3 +78,17 @@
   box-shadow: 0px 4px 4px 0px #00000026;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 430px) {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    zoom:0.7
+  }
+
+  .view{
+    margin-top: 30px;
+  }
+}
